# fct-nova-concurrency-and-parallelism-labs

./: README.md
labs/lab-1-pi-approximation-monte-carlo-method-in-java/: exp_test_pi_approximation_monte_carlo_method_in_java.sh
labs/lab-2-pi-approximation-monte-carlo-method-in-c/: CMakeLists.txt  exp_test_pi_approximation_monte_carlo_method_in_c.sh  main.c  pi_approximation_monte_carlo_method_in_c
labs/lab-2-pi-approximation-monte-carlo-method-in-c/docs/: pi-approximation-monte-carlo-method-c-version.ods
labs/lab-2-pi-approximation-monte-carlo-method-in-c/parallel_version/: pi_approximation_monte_carlo_parallel_version.c  pi_approximation_monte_carlo_parallel_version.h
labs/lab-2-pi-approximation-monte-carlo-method-in-c/sequential_version/: pi_approximation_monte_carlo_sequential_version.c  pi_approximation_monte_carlo_sequential_version.h
labs/lab-3-pi-approximation-monte-carlo-method-in-open-mp/: CMakeLists.txt  exp_test_pi_approximation_monte_carlo_method_in_open_mp.sh  main.c  pi_approximation_monte_carlo_method_in_open_mp
labs/lab-3-pi-approximation-monte-carlo-method-in-open-mp/docs/: pi-approximation-monte-carlo-method-open-mp-version.ods
labs/lab-3-pi-approximation-monte-carlo-method-in-open-mp/parallel_version/: pi_approximation_monte_carlo_parallel_version.c  pi_approximation_monte_carlo_parallel_version.h
labs/lab-3-pi-approximation-monte-carlo-method-in-open-mp/sequential_version/: pi_approximation_monte_carlo_sequential_version.c  pi_approximation_monte_carlo_sequential_version.h
lectures-and-labs-notes/: main.tex
(+19 files in other folders)
